# vscode-sql-helper

./: .gitignore  .vscodeignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.github/workflows/: build-binaries.yml  build.yml
app/: vite.config.ts
app/src/: App.vue  main.ts  style.css  types.ts
app/src/components/: DataTablePanel.vue  PaginationBar.vue  SidebarExplorer.vue  SqliteStudio.vue  StructureEditor.vue
apps/extension/: .vscodeignore  LICENSE  package.json  package.nls.json  package.nls.zh-cn.json  tsconfig.json
apps/extension/media/webview/: index.html
apps/extension/scripts/: build.mjs  package-vsix.mjs
apps/extension/src/: extension.ts
apps/webview/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/webview/src/: App.vue
crates/sql-analyzer/src/: main.rs
native/rust-backend/: Cargo.toml
native/rust-backend/src/: main.rs
native/rust-backend/src/adapters/: ddl.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
native/rust-backend/src/models/: mod.rs
rust/sql-analyzer/: Cargo.toml
scripts/: build-extension.sh  build-rust.sh  build-vsix.sh  build-webview.sh  build.sh  check.sh  clean.sh  copy-native-binary.mjs  copy-rust-binary.mjs  copy-rust-binary.sh  dev-webview.sh  download-platform-bins.sh  package.sh  watch-extension.sh
src/: extension.ts  sqlParser.ts
webview/: index.html  vite.config.ts
webview/src/: App.vue  style.css  types.ts
webview/src/components/: DataTablePanel.vue  SidebarExplorer.vue  SqliteStudio.vue  StructureEditor.vue
(+30 files in other folders)
