[package]
name = "usd-native"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
home = "=0.5.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "mysql", "postgres"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "fs"] }
